2003-07-23  Martin Blom  <martin@blom.org>

	* AHI: "Play a test sound" now plays a 16 bit sample instead of 8
	bit, and it's always played at full volume.

2003-07-14  Martin Blom  <martin@blom.org>

	* Minor updates to the SFD files.

2003-07-13  Martin Blom  <martin@blom.org>

	* Added SFD files contributed by Steffen Haeuser to the developer
	archives.

	* Include/C/clib/ahi_(|sub_)protos.h: Added extern "C" if C++
	detected. [Steffen Haeuser]

2003-07-07  Martin Blom  <martin@blom.org>

	* Released emu10kx.audio 5.6.

	* The EMU10kx CAMD driver is now part of the m68 build.

2003-07-06  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.41.

	* ahi.device: Reworked the dynamic volume so that the master
	volume is scaled based on the number of device openers. Then, for
	each opener, each request is individually scaled based on the
	number of active requests. This way, different programs will not
	affect each other.
	
2003-07-05  Martin Blom  <martin@blom.org>

	* emu10kx.audio: The newly added CAMD init code would crash the
	driver would not load.
	
	* Released ahi.device 5.40.

	* ahi.device: Made a subtile change to the linear interpolation
	behaviour when a looped sound is played. Let's hope I made it
	better and not worse ...

	* Released AHI preferences 5.10.

	* AHI preferences: Added annotation to the properties box.

	* Released emu10kx.audio 5.5.
	
	* Released void.audio 5.5.
	
	* Released filesave.audio 5.2.

	* Drivers/Common/library.c: Fixed init code for MorphOS and
	Amithlon.

	* Drivers/Common/library.h: Added PROCGW macro to handle
	CreateNewProc() entry for all targets.

2003-07-04  Martin Blom  <martin@blom.org>

	* emu10kx.audio: Added CAMD support.

	* emu10kx: A CAMD driver that works with both V37.14 and V40.4 of
	camd.library.

2003-06-30  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.39.

	* Resurrected the old m68k assembler version of the echo routines.

2003-06-23  Martin Blom  <martin@blom.org>
